footer and colors

--- a/pages/homepage.htm
+++ b/pages/homepage.htm
@@ -39,16 +39,6 @@ imagesPerPage = 8
             {% partial "_swiper/slider" slides=slider settings=slider_settings %}
 
             <div class="gradient position-absolute start-0 top-0 w-100 h-100"></div>
-
-            {#<div class="info position-absolute end-0 p-5 d-none d-md-block rounded-start-2">
-                <p class="title fw-bold fs-1 mb-0 lh-sm text-white">
-                    REMA Trutnov
-                </p>
-
-                <p class="heading h2 mb-0 text-white">
-                    Správa bytového fondu
-                </p>
-            </div>#}
         </div>
     </div>
 {% endif %}
@@ -66,12 +56,12 @@ imagesPerPage = 8
             <div class="service col {#{ loop.index is odd ? 'odd' : 'even' }#}">
                 <a href="{{ post.url }}" class="px-40 pb-40 pt-3 d-block position-relative h-100">
                     <p class="img mb-0 d-flex justify-content-center">
-                        {% set image = ["assets/images/services/", post.slug, ".svg"]|join|theme %}
+                        {% set image = ["assets/images/services/", post.slug, ".png"]|join|theme %}
 
                         <span class="d-block bg-white transition" style="mask-image: url('{{ image }}'); -webkit-mask-image: url('{{ image }}');"></span>
                     </p>
 
-                    <p class="title mb-0 pt-4 border-2 border-top border-green h2 text-white transition text-center">
+                    <p class="title mb-0 pt-4 border-2 border-top border-green h3 transition text-center">
                     <span class="d-inline-block">
                         {{ post.title }}
                     </span>
